stand bug fix and changelog
added Changelog

added css cursor attribute of default to "buttons"

fixed stand bug

changed the way the buttons are made invisible by changing opacity
and removing event listener rather than setting text content to ""

--- a/mainstyle.css
+++ b/mainstyle.css
@@ -44,6 +44,7 @@ body {
     text-align: center;
     color: greenyellow;
     margin: 0;
+    cursor: default;
 }
 
 #hit{
@@ -53,6 +54,7 @@ body {
     text-align: center;
     color: greenyellow;
     margin: 0;
+    cursor: default;
 }
 #stand{
     font-family: sans-serif;
@@ -61,6 +63,7 @@ body {
     text-align: center;
     color: greenyellow;
     margin: 0;
+    cursor: default;
 }
 
 #handlabels {
@@ -79,6 +82,7 @@ body {
         text-align: center;
         color: greenyellow;
         margin: 0;
+        
 }
 
 #acescorelabels {
